--- a/index.html
+++ b/index.html
@@ -67,6 +67,46 @@
                 </div>
                 <div class="col-lg-6"></div>
             </div>
+            <div class="row pt-5">
+                <div class="col-lg-12 form-bg">
+                    <div class="row">
+                        <ul>
+                            <li><a href="javascript:void()"><i class="fa-solid fa-jet-fighter-up"></i>Flights</a></li>
+                            <li><a href="javascript:void()"><i class="fa-solid fa-hotel"></i> Hotels</a></li>
+                            <li><a href="javascript:void()"><i class="fa-solid fa-car"></i>Cars</a></li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-2">
+                            <label class="d-none" for="origin">origin</label>
+                            <input type="text" placeholder="Enter Origin City">
+                        </div>
+                        <div class="col-lg-2">
+                            <label class="d-none" for="origin">destination</label>
+                            <input type="text" placeholder="Enter Destination City">
+                        </div>
+                        <div class="col-lg-2">
+                            <label class="d-none" for="origin">start date</label>
+                            <input type="date">
+                        </div>
+                        <div class="col-lg-2">
+                            <label class="d-none" for="origin">end date</label>
+                            <input type="date">
+                        </div>
+                        <div class="col-lg-2">
+                            <select>
+                                <option selected>Open this select menu</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div class="col-lg-2">
+                            <button type="button"> Search </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!--/Banner Section End  -->
