--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <!-- Navbar Section Start -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-danger">
+        <nav class="navbar navbar-expand-lg bg-secondary">
             <div class="container">
               <a class="navbar-brand" href="javascript:void()">
-                <img src="./assets/img/logo-momondo.png" class="img-fluid" style="width: 140px; height: 50px; background: #fff; border-radius: 5px; padding: 5px;">
+                <img src="./assets/img/logo-momondo.png" class="img-fwhite" style="width: 140px; height: 50px;">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
                             </ul>
                         </li>
                     </ul>
-                  <button class="btn text-info" type="submit">Log In</button>
+                  <button class="btn text-warning" type="submit">Log In</button>
                 </form>
               </div>
             </div>
@@ -67,7 +67,7 @@
                 </div>
                <div class="col-lg-6"></div>
             </div>
-            <div class="row mt-5 form-bg">
+            <div class="row mt-5 form-bg bg-secondary">
                 <div class="col-lg-10">
                     <div class="row">
                         <ul class="list-unstyled">
@@ -78,19 +78,19 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-3">
-                            <input type="text" class="form-control" placeholder="Origin City" aria-label="First name">
+                            <input type="text" class="form-control" placeholder="Origin City" aria-label="First name" style="font-size: 13px;">
                         </div>
                           <div class="col-lg-3">
-                            <input type="text" class="form-control" placeholder="Destination City" aria-label="Last name">
+                            <input type="text" class="form-control" placeholder="Destination City" aria-label="Last name" style="font-size: 13px;">
                         </div>
                         <div class="col-lg-2">
-                            <input type="date" class="form-control" placeholder="First name" aria-label="First name">
+                            <input type="date" class="form-control" placeholder="First name" aria-label="First name" style="font-size: 13px;">
                         </div>
                           <div class="col-lg-2">
-                            <input type="date" class="form-control" placeholder="Last name" aria-label="Last name">
+                            <input type="date" class="form-control" placeholder="Last name" aria-label="Last name" style="font-size: 13px;">
                         </div>
                         <div class="col-lg-2">
-                            <select class="form-select" aria-label="Default select example">
+                            <select class="form-select" aria-label="Default select example" style="font-size: 13px;">
                                 <option selected>Open this select menu</option>
                                 <option value="1">One</option>
                                 <option value="2">Two</option>
@@ -98,7 +98,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="row pt-3">
+                    <div class="row pt-1">
                         <div class="col-lg-2">
                             <a style="background: none;" href="javascript:void()"><i class="fa-solid fa-suitcase-rolling" style="padding-right: 5px;"></i>trip type</a>
                         </div>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 p-3">
-                    <button type="button" class="btn text-danger">Danger</button>
+                    <button type="button" class="btn bg-warning" style="font-size: 13px;">Search</button>
                 </div>
             </div>
         </div>
@@ -127,22 +127,22 @@
         <div class="container text-center pt-5 pb-5">
             <h3>SOME FUN WE COVERED</h3>
            <div class="row d-flex">
-                <div class="col-lg-2 col-md-6 box">
+                <div class="col-lg-2 col-lg-6 box">
                     <i class="fa-solid fa-person-biking fa-4x pt-4"></i>
                 </div>
-                <div class="col-lg-2 col-md-6 box">
+                <div class="col-lg-2 col-lg-6 box">
                     <i class="fa-solid fa-location-dot fa-4x pt-4"></i>
                 </div>
-                <div class="col-lg-2 col-md-6 box">
+                <div class="col-lg-2 col-lg-6 box">
                     <i class="fa-solid fa-person-hiking fa-4x pt-4"></i>
                 </div>
-                <div class="col-lg-2 col-md-6 box">
+                <div class="col-lg-2 col-lg-6 box">
                     <i class="fa-solid fa-ship fa-4x pt-4"></i>
                 </div>
-                <div class="col-lg-2 col-md-6 box">
+                <div class="col-lg-2 col-lg-6 box">
                     <i class="fa-solid fa-mountain fa-4x pt-4"></i>
                 </div>
-                <div class="col-lg-2 col-md-6 box">
+                <div class="col-lg-2 col-lg-6 box">
                     <i class="fa-solid fa-people-arrows fa-4x pt-4"></i>
                 </div>
            </div>
@@ -183,8 +183,8 @@
                 <h3>POPULAR DESTINATIONS</h3>
            </div>
            <div class="row pt-5 pb-5">
-                <div class="col-lg-3 col-md-6">
-                    <div class="card" style="width: 16rem;">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
                         <img src="./assets/img/popular1.jpg" class="card-img-top" alt="img1">
                         <div class="card-body p-4" style="text-align: start;">
                           <h6 class="card-title">Lorem <span class="text-warning fs-7 ">1345</span> dolor ad voluptatem culpa</h6>
@@ -192,8 +192,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="card" style="width: 16rem;">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
                         <img src="./assets/img/popular2.jpg" class="card-img-top" alt="img1">
                         <div class="card-body p-4" style="text-align: start;">
                           <h6 class="card-title">Lorem <span class="text-warning fs-7 ">1345</span> dolor ad voluptatem culpa</h6>
@@ -201,8 +201,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="card" style="width: 16rem;">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
                         <img src="./assets/img/popular3.jpg" class="card-img-top" alt="img1">
                         <div class="card-body p-4" style="text-align: start;">
                           <h6 class="card-title">Lorem <span class="text-warning fs-7 ">1345</span> dolor ad voluptatem culpa</h6>
@@ -210,8 +210,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="card" style="width: 16rem;">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
                         <img src="./assets/img/popular4.jpg" class="card-img-top" alt="img1">
                         <div class="card-body p-4" style="text-align: start;">
                           <h6 class="card-title">Lorem <span class="text-warning fs-7 ">1345</span> dolor ad voluptatem culpa</h6>
@@ -221,8 +221,8 @@
                 </div>
            </div>
            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="card" style="width: 16rem;">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
                         <img src="./assets/img/popular5.jpg" class="card-img-top" alt="img1">
                         <div class="card-body p-4" style="text-align: start;">
                           <h6 class="card-title">Lorem <span class="text-warning fs-7 ">1345</span> dolor ad voluptatem culpa</h6>
@@ -230,8 +230,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="card" style="width: 16rem;">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
                         <img src="./assets/img/popular6.jpg" class="card-img-top" alt="img1">
                         <div class="card-body p-4" style="text-align: start;">
                           <h6 class="card-title">Lorem <span class="text-warning fs-7 ">1345</span> dolor ad voluptatem culpa</h6>
@@ -239,8 +239,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="card" style="width: 16rem;">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
                         <img src="./assets/img/img8.jpg" class="card-img-top" alt="img1">
                         <div class="card-body p-4" style="text-align: start;">
                           <h6 class="card-title">Lorem <span class="text-warning fs-7 ">1345</span> dolor ad voluptatem culpa</h6>
@@ -248,8 +248,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="card" style="width: 16rem;">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="card">
                         <img src="./assets/img/popular8.jpg" class="card-img-top" alt="img1">
                         <div class="card-body p-4" style="text-align: start;">
                           <h6 class="card-title">Lorem <span class="text-warning fs-7 ">1345</span> dolor ad voluptatem culpa</h6>
@@ -294,7 +294,7 @@
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                 </div>
                 <div class="col-lg-3">
-                    <button type="button" class="btn btn-warning">Warning</button>
+                    <button type="button" class="btn btn-warning">Calculate Now</button>
                 </div>
             </div>
         </div>
